Fix alignments

--- a/src/assets/css/components/_signinForm.scss
+++ b/src/assets/css/components/_signinForm.scss
@@ -1,8 +1,11 @@
 .component-signin-form {
   @extend .roboto;
-  max-width: 400px;
+  width: 400px;
   min-height: 400px;
-  flex: 1;
+  @media (max-width: 768px) {
+    width: auto;
+    min-width: 300px;
+  }
 
   .form-title {
     @extend .roboto-md;
